fix: Add truncation for unit titles in UnitButton and enhance styling for better readability

--- a/src/courseware/course/sequence/sequence-navigation/SequenceNavigation.scss
+++ b/src/courseware/course/sequence/sequence-navigation/SequenceNavigation.scss
@@ -16,3 +16,12 @@
 .bg-light-purple{
   background-color: #FADCFA !important;
 }
+
+.unit-title{
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: normal;
+}
